syntax = "proto3";
package wallet_gateway;

message Address {
    string address = 1;
}

message Balance {
    int64 amount = 1;
    int64 pending = 2;
}

message Unspent {
    string tx_hash = 1;
    int32 tx_output_n = 2;
    int32 tx_output_n2 = 3;
    uint64 value = 4;
    int32 confirmations = 5;
    string scriptpubkey = 6;
    int32 priority = 7;
}

message Unspents {
    repeated Unspent unspents = 1;
}

message Wallet {
    int32 pbkdf2_iterations = 1;
    int32 version = 2;
    string uuid = 3;
    string pay_load = 4;
    string salt = 5;
}

message Coin {
    int32 status = 1;
    int32 currency = 2;
    int32 category = 3;
    string salt = 4;
    int64 balance = 5;
    string w_id = 6;
    string payload = 7;
}


message Coins {
    repeated Coin Coins = 1;
}

message CoinsDetail {
    Coin coin = 1;
    repeated CoinInfo coinInfos = 2;
}

message CoinInfo {
    int32 index = 1;
    int32 status = 2;
    string address = 3;
    string label = 4;
    int64 balance = 5;
}

message RespSyncWallet {
    Wallet wallet = 1;
    int32 status = 2;
    Coins Coins = 3;
}

message RequestWalletInfo {
    string check_sum = 1;
    string payload = 2;
    string salt = 3;
    int32 n = 4;
    string wid = 5;
    int32 version = 6;
}

message RequestUserInfo {
    string uid = 1;
}

message CreateCoinArgs {
    int32 category =1;
    int32 currency = 2;
    string salt = 3;
    string master_address = 4;
    string payload = 5;
    string w_id =6;
}

message RequestCreateCoinInfo {
    int32 index = 1;
    int32 status = 2;
    string address = 3;
    string label = 4;
    int32 currency = 5;
    string w_id = 6;
}

message LuckyPackageRequest {
int32 total = 1;
int64 amount = 2;
int64 fee = 3;
int32 allot_type = 4;
int32 package_type = 5;
string tips = 6;
repeated string addresses = 7;
}

message TransferRequest {
int64 amount = 1;
int64 fee = 2;
int32 transfer_type = 3;
string tips = 4;
repeated string from_addresses = 5;
repeated string to_addresses = 6;
}

message CrowdfuningRequest {
int64 amount = 1;
int32 total = 2;
string tips = 3;
}

message CrowdfuningResp {
string txId = 1;
}

message PayCrowdRequest {
string txId = 1;
repeated string addresses = 2;
}

message OriginalTransaction {
string rawhex = 1;
string vts = 2;
string transaction_id = 3;
}

message PublishTransaction {
string signed_hex = 1;
string transaction_id = 2;
}

message TransactionFlowingRequest {
int32 currency = 1;
}

message TransactionFlowing {
int32 status =1; // confirm unconfirm
int32 category = 2; // transfer luckypackage
int64 amount = 3;
int64 time = 4;
string avatar = 5;
string username = 6;
string address = 7;
string txid = 8;
int32 currency = 9; // btc ltc
}

message TransactionFlowings {
int32 currency = 1; // btc ltc
repeated TransactionFlowing transaction_history = 2;
}

message DefaultAddress {
    int32 currency = 1;
    string address =2;
}

message ListDefaultAddress {
    repeated DefaultAddress defaultAddresses = 1;
}